--- a/src/App.scss
+++ b/src/App.scss
@@ -13,10 +13,76 @@ body {
 
 @import "theme";
 
+$gap: 50px;
+$height: calc((100% - (#{$gap} * 2)) / 3);
+
 .app-container {
+  overflow: auto;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
   width: 100vw;
   height: 100vh;
-  background-color: $space;
+  padding: 60px 100px;
+  background-color: $black;
+
+  .app-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: calc(60% - #{$gap});
+    height: 100%;
+
+    .geo {
+      height: calc(#{$height} * 2 + #{$gap});
+    }
+
+    .global {
+      height: $height;
+
+      svg {
+        overflow: visible;
+      }
+    }
+  }
+
+  .app-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 40%;
+    height: 100%;
+
+    .temp {
+      height: $height;
+    }
+  }
+
+  .card {
+    position: relative;
+    width: 100%;
+    padding: 30px 40px;
+    background-color: $white;
+    border-radius: 5px;
+
+    > h2 {
+      position: absolute;
+      top: -32px;
+      left: 5px;
+      margin: 0;
+      color: white;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    > div {
+      width: 100%;
+      height: 100%;
+
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
