--- a/src/components/Status.scss
+++ b/src/components/Status.scss
@@ -1,12 +1,8 @@
 .status-container {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
   width: 160px;
   height: 105px;
-  padding: 10px 20px;
+  padding: 10px 0 0 20px;
   color: #73879c;
 
   &::before {
@@ -25,8 +21,26 @@
   }
 
   .status-content {
-    margin-bottom: 5px;
-    font-size: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 36px;
+    margin: 0 0 5px 0;
+    font-weight: bold;
+
+    .status-content-value {
+      font-size: 28px;
+    }
+
+    .status-content-unit {
+      margin-top: 8px;
+      margin-left: 10px;
+      font-size: 20px;
+    }
+  }
+
+  .status-content-sub-value {
+    font-size: 14px;
     font-weight: bold;
   }
 }
