--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -7,6 +7,7 @@
   .card-title-wrapper {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 48px;
     padding: 0 10px;
     border-bottom: 1px solid #e6e9ed;
