--- a/src/components/main/MapChartYearRange.scss
+++ b/src/components/main/MapChartYearRange.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  width: 40px;
   padding: 40px 0;
 
   .map-chart-year-text {
@@ -10,11 +11,17 @@
     font-weight: bold;
   }
 
-  .map-chart-year-input[type="range"] {
+  .map-chart-year-range {
     writing-mode: bt-lr; /* IE */
     -webkit-appearance: slider-vertical; /* WebKit */
     width: 8px;
     height: 240px;
-    padding: 0 5px;
+    padding: 0;
+  }
+
+  svg {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
   }
 }
